--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -62,8 +62,8 @@ jobs:
     #    and modify them (or add more) to build your code if your project
     #    uses a compiled language
 
-    - run: |
-        mvn compile
+    - run: ./build.ps1
+      shell: pwsh
     #   make bootstrap
     #   make release
 
